--- a/classes/nightingale_sentry_src.SentryHandler.html
+++ b/classes/nightingale_sentry_src.SentryHandler.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><a href="../interfaces/nightingale_types_src.Handler.html" class="tsd-signature-type" data-tsd-kind="Interface">Handler</a></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L103">packages/nightingale-sentry/src/index.ts:103</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L100">packages/nightingale-sentry/src/index.ts:100</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -50,7 +50,7 @@
 <section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class"><a id="constructor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>constructor</span><a href="#constructor" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-<li class="tsd-signature tsd-anchor-link" id="constructor.new_SentryHandler">new <wbr/>Sentry<wbr/>Handler<span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span>Sentry<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span>, minLevel<span class="tsd-signature-symbol">: </span><a href="../enums/nightingale_levels_src.Level.html" class="tsd-signature-type" data-tsd-kind="Enumeration">Level</a>, options<span class="tsd-signature-symbol">?: </span><a href="../interfaces/nightingale_sentry_src.Options.html" class="tsd-signature-type" data-tsd-kind="Interface">Options</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="nightingale_sentry_src.SentryHandler.html" class="tsd-signature-type" data-tsd-kind="Class">SentryHandler</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span><span class="tsd-signature-symbol">&gt;</span><a href="#constructor.new_SentryHandler" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="constructor.new_SentryHandler">new <wbr/>Sentry<wbr/>Handler<span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">(</span>Sentry<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span>, minLevel<span class="tsd-signature-symbol">: </span><a href="../enums/nightingale_levels_src.Level.html" class="tsd-signature-type" data-tsd-kind="Enumeration">Level</a>, options<span class="tsd-signature-symbol">?: </span><a href="../interfaces/nightingale_sentry_src.Options.html" class="tsd-signature-type" data-tsd-kind="Interface">Options</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="nightingale_sentry_src.SentryHandler.html" class="tsd-signature-type" data-tsd-kind="Class">SentryHandler</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span><span class="tsd-signature-symbol">&gt;</span><a href="#constructor.new_SentryHandler" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
 <section class="tsd-panel tsd-type-parameters">
 <h4>Type Parameters</h4>
@@ -61,14 +61,14 @@
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
 <li>
-<h5>Sentry: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span></h5></li>
+<h5>Sentry: <span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span></h5></li>
 <li>
 <h5>minLevel: <a href="../enums/nightingale_levels_src.Level.html" class="tsd-signature-type" data-tsd-kind="Enumeration">Level</a></h5></li>
 <li>
 <h5><code class="tsd-tag ts-flagOptional">Optional</code> options: <a href="../interfaces/nightingale_sentry_src.Options.html" class="tsd-signature-type" data-tsd-kind="Interface">Options</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="nightingale_sentry_src.SentryHandler.html" class="tsd-signature-type" data-tsd-kind="Class">SentryHandler</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">S</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L108">packages/nightingale-sentry/src/index.ts:108</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L105">packages/nightingale-sentry/src/index.ts:105</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="handle" class="tsd-anchor"></a>
@@ -76,13 +76,13 @@
 <div class="tsd-signature">handle<span class="tsd-signature-symbol">:</span> <a href="../types/nightingale_types_src.Handle.html" class="tsd-signature-type" data-tsd-kind="Type alias">Handle</a></div><aside class="tsd-sources">
 <p>Implementation of <a href="../interfaces/nightingale_types_src.Handler.html">Handler</a>.<a href="../interfaces/nightingale_types_src.Handler.html#handle">handle</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L106">packages/nightingale-sentry/src/index.ts:106</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L103">packages/nightingale-sentry/src/index.ts:103</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="minLevel" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>min<wbr/>Level</span><a href="#minLevel" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">min<wbr/>Level<span class="tsd-signature-symbol">:</span> <a href="../enums/nightingale_levels_src.Level.html" class="tsd-signature-type" data-tsd-kind="Enumeration">Level</a></div><aside class="tsd-sources">
 <p>Implementation of <a href="../interfaces/nightingale_types_src.Handler.html">Handler</a>.<a href="../interfaces/nightingale_types_src.Handler.html#minLevel">minLevel</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L104">packages/nightingale-sentry/src/index.ts:104</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-sentry/src/index.ts#L101">packages/nightingale-sentry/src/index.ts:101</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
