--- a/modules/nightingale_app_react_native_src.html
+++ b/modules/nightingale_app_react_native_src.html
@@ -32,6 +32,10 @@
 <h3 class="tsd-index-heading">Variables</h3>
 <div class="tsd-index-list"><a href="../variables/nightingale_app_react_native_src.ReactNativeConsoleHandlerForPlatform.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-32"></use></svg><span>React<wbr/>Native<wbr/>Console<wbr/>Handler<wbr/>For<wbr/>Platform</span></a>
 <a href="../variables/nightingale_app_react_native_src.appLogger.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-32"></use></svg><span>app<wbr/>Logger</span></a>
+</div></section>
+<section class="tsd-index-section">
+<h3 class="tsd-index-heading">Functions</h3>
+<div class="tsd-index-list"><a href="../functions/nightingale_app_react_native_src.listenReactNativeUnhandledErrors.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>listen<wbr/>React<wbr/>Native<wbr/>Unhandled<wbr/>Errors</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>References</h2>
