--- a/functions/nightingale_app_react_native_src.listenReactNativeUnhandledErrors.html
+++ b/functions/nightingale_app_react_native_src.listenReactNativeUnhandledErrors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class="default" lang="en"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>formatObject | nightingale-monorepo</title><meta name="description" content="Documentation for nightingale-monorepo"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="../assets/style.css"/><link rel="stylesheet" href="../assets/highlight.css"/><script defer src="../assets/main.js"></script><script async src="../assets/search.js" id="tsd-search-script"></script><script async src="../assets/navigation.js" id="tsd-nav-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
+<!DOCTYPE html><html class="default" lang="en"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>listenReactNativeUnhandledErrors | nightingale-monorepo</title><meta name="description" content="Documentation for nightingale-monorepo"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="../assets/style.css"/><link rel="stylesheet" href="../assets/highlight.css"/><script defer src="../assets/main.js"></script><script async src="../assets/search.js" id="tsd-search-script"></script><script async src="../assets/navigation.js" id="tsd-nav-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
 <div class="tsd-toolbar-contents container">
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
@@ -13,27 +13,21 @@
 <div class="tsd-page-title">
 <ul class="tsd-breadcrumb">
 <li><a href="../index.html">nightingale-monorepo</a></li>
-<li><a href="../modules/nightingale_formatter_src.html">nightingale-formatter/src</a></li>
-<li><a href="nightingale_formatter_src.formatObject.html">formatObject</a></li></ul>
-<h1>Function formatObject</h1></div>
+<li><a href="../modules/nightingale_app_react_native_src.html">nightingale-app-react-native/src</a></li>
+<li><a href="nightingale_app_react_native_src.listenReactNativeUnhandledErrors.html">listenReactNativeUnhandledErrors</a></li></ul>
+<h1>Function listenReactNativeUnhandledErrors</h1></div>
 <section class="tsd-panel">
 <ul class="tsd-signatures">
-<li class="tsd-signature tsd-anchor-link" id="formatObject"><span class="tsd-kind-call-signature">format<wbr/>Object</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">object</span>, <span class="tsd-kind-parameter">styleFn</span><span class="tsd-signature-symbol">?</span>, <span class="tsd-kind-parameter">objectStyles</span><span class="tsd-signature-symbol">?</span>, <span class="tsd-kind-parameter">__namedParameters</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><a href="#formatObject" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="listenReactNativeUnhandledErrors"><span class="tsd-kind-call-signature">listen<wbr/>React<wbr/>Native<wbr/>Unhandled<wbr/>Errors</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">logger</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><a href="#listenReactNativeUnhandledErrors" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
 <li>
-<h5><span class="tsd-kind-parameter">object</span>: <span class="tsd-signature-type ">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span></h5></li>
-<li>
-<h5><span class="tsd-kind-parameter">styleFn</span>: <span class="tsd-signature-type ">StyleFn</span><span class="tsd-signature-symbol"> = noStyleFn</span></h5></li>
-<li>
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-parameter">objectStyles</span>: <span class="tsd-signature-type ">ObjectStyles</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h5></li>
-<li>
-<h5><span class="tsd-kind-parameter">__namedParameters</span>: <span class="tsd-signature-type ">FormatObjectOptions</span><span class="tsd-signature-symbol"> = {}</span></h5></li></ul></div>
-<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
+<h5><span class="tsd-kind-parameter">logger</span>: <a href="../classes/nightingale_unit_testing_src.Logger.html" class="tsd-signature-type tsd-kind-class">Logger</a><span class="tsd-signature-symbol"> = ...</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-formatter/src/formatObject.ts#L438">packages/nightingale-formatter/src/formatObject.ts:438</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/christophehurpeau/nightingale/blob/master/packages/nightingale-app-react-native/src/index.ts#L30">packages/nightingale-app-react-native/src/index.ts:30</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
